<resources>
    <string name="app_name">Inventory</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tvLogin_txt">LOGIN</string>
    <string name="tieUser">email</string>
    <string name="tiePassword">password</string>
    <string name="cbrecuerdame_txt">Recuerdame</string>
    <string name="cbRecuerdame_txt">Recuerdame</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="tvPlataformas">Iniciar sesion con otras plataformas</string>
    <string name="tvSignedUp">Registro</string>
    <string name="tietUser">Usuario: </string>
    <string name="tieEmail">Correo electrónico</string>
    <string name="tieConfirmPassword">Confirmar contraseña</string>
    <!-- Strings used for fragments for navigation -->

</resources>